--- a/tests/builders/csharp/Doodads.Builder.Test.csproj
+++ b/tests/builders/csharp/Doodads.Builder.Test.csproj
@@ -13,6 +13,7 @@
     <RootNamespace>Doodads.Builder.Test</RootNamespace>
     <AssemblyName>Doodads.Builder.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,6 +67,7 @@
     <Content Include="Derived\Derived.js" />
     <Content Include="Derived\Derived.xml" />
     <Content Include="Default.html" />
+    <Content Include="TestDoodad\TestDoodad.css" />
     <Content Include="TestDoodad\TestDoodad.html" />
     <Content Include="TestDoodad\TestDoodad.js" />
     <Content Include="TestDoodad\TestDoodad.xml" />
