--- a/builders/csharp/Doodads.Builder/Doodads.Builder.csproj
+++ b/builders/csharp/Doodads.Builder/Doodads.Builder.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\Component.xsd">
+    <None Include="..\..\..\src\Component.xsd">
       <Link>Component.xsd</Link>
       <SubType>Designer</SubType>
     </None>
