Rename majority of instances of component to doodad. C# Builder now works correctly

--- a/builders/csharp/Doodads.Builder.Test/Web.config
+++ b/builders/csharp/Doodads.Builder.Test/Web.config
@@ -9,7 +9,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <httpHandlers>
-      <add verb="GET" path="*.component" type="Vastardis.UI.Components.ComponentBuilder,Doodads.Builder"/>
+      <add verb="GET" path="*.doodad" type="Doodads.Builder.Builder,Doodads.Builder"/>
     </httpHandlers>
   </system.web>
 </configuration>
