--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ builders/csharp/**/bin
 builders/csharp/*.suo
 builders/csharp/**/*.user
 builders/csharp/Doodads.Builder.Test/JavaScript/*
+builders/csharp/Doodads.Builder.Test/doodads/*
 builders/nodejs/test/javascript
