--- a/builders/csharp/Doodads.Builder.Test/Doodads.Builder.Test.csproj
+++ b/builders/csharp/Doodads.Builder.Test/Doodads.Builder.Test.csproj
@@ -57,30 +57,6 @@
     <Content Include="..\..\..\output\doodads.tools.js">
       <Link>JavaScript\doodads.tools.js</Link>
     </Content>
-    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.css">
-      <Link>doodads\NumericTextBox\NumericTextBox.css</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.html">
-      <Link>doodads\NumericTextBox\NumericTextBox.html</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.js">
-      <Link>doodads\NumericTextBox\NumericTextBox.js</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.xml">
-      <Link>doodads\NumericTextBox\NumericTextBox.xml</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\TextBox\TextBox.css">
-      <Link>doodads\TextBox\TextBox.css</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\TextBox\TextBox.html">
-      <Link>doodads\TextBox\TextBox.html</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\TextBox\TextBox.js">
-      <Link>doodads\TextBox\TextBox.js</Link>
-    </Content>
-    <Content Include="..\..\..\src\doodads\TextBox\TextBox.xml">
-      <Link>doodads\TextBox\TextBox.xml</Link>
-    </Content>
     <Content Include="..\..\..\src\support\jquery-1.6.4.js">
       <Link>JavaScript\jquery-1.6.4.js</Link>
     </Content>
@@ -90,16 +66,39 @@
     <Content Include="..\..\..\src\mustache\mustache.js">
       <Link>JavaScript\mustache.js</Link>
     </Content>
-    <Content Include="doodads\Derived\Derived.html" />
-    <Content Include="doodads\Derived\Derived.js" />
-    <Content Include="doodads\Derived\Derived.xml" />
+
+
+    <Content Include="..\..\..\src\doodads\TextBox\TextBox.js">
+      <Link>doodads\TextBox\TextBox.js</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\TextBox\TextBox.css">
+      <Link>doodads\TextBox\TextBox.css</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\TextBox\TextBox.html">
+      <Link>doodads\TextBox\TextBox.html</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\TextBox\TextBox.xml">
+      <Link>doodads\TextBox\TextBox.xml</Link>
+    </Content>
+
+    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.js">
+      <Link>doodads\NumericTextBox\NumericTextBox.js</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.css">
+      <Link>doodads\NumericTextBox\NumericTextBox.css</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.html">
+      <Link>doodads\NumericTextBox\NumericTextBox.html</Link>
+    </Content>
+    <Content Include="..\..\..\src\doodads\NumericTextBox\NumericTextBox.xml">
+      <Link>doodads\NumericTextBox\NumericTextBox.xml</Link>
+    </Content>
+
     <Content Include="Default.html" />
-    <Content Include="doodads\TestDoodad\TestDoodad.css" />
-    <Content Include="doodads\TestDoodad\TestDoodad.html" />
-    <Content Include="doodads\TestDoodad\TestDoodad.js" />
-    <Content Include="doodads\TestDoodad\TestDoodad.xml" />
     <Content Include="JavaScript\jquery.debounce-1.0.5.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
