--- a/builders/nodejs/doodads-builder/package.json
+++ b/builders/nodejs/doodads-builder/package.json
@@ -2,9 +2,10 @@
 	"name" : "doodads-builder",
 	"description" : "Doodads builder",
 	"version" : "1.0.0",
-	"author" : "Kiro Risk <kirollos@gmail.com>",
+	"author" : "Vastardis Capital Services LLP",
 	"contributors" : [
-		"Sahab Yazdani <s@s.com>"
+		"Kirollos Risk",
+		"Sahab Yazdani"
 	],
 	"main" : "./builder.js",
 	"engine": "node >= 0.4.1"
