Remove node.js builder and packages (no maintainer) Upgrade node.js to v0.6.18 Make sure builders and project files work easily enough

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ builders/csharp/**/*.user
 builders/csharp/Doodads.Builder.Test/JavaScript/*
 builders/csharp/Doodads.Builder.Test/doodads/*
 builders/csharp/Doodads.Builder.Test/tipsy.css
-builders/nodejs/test/javascript
+node_modules/*
